src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/timeunits-undefined.tessla
in a: Events[Int]

def hundredSecLater := time(a) + 100s
def oneDayLater := time(a) + 1d

out hundredSecLater
out oneDayLater